# solcrackers-hackathon

./: LICENSE  README.md  index.html
backend/: .init.sql  Cargo.toml  docker-compose.yml  secret.env
backend/migrations/: 0001_create_tables.sql  001_create_slot_bookings.down.sql  002_create_ev_responses.up.sql  20250913_create_ev_requests.sql
backend/migrations/migrations/: 001_create_slot_bookings.up.sql  002_create_ev_responses.down.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs  repository.rs  routes.rs
backend/src/routes/: analytics.rs  booking.rs  handlers.rs  mod.rs
frontend/: data.html  index.html  main.html  script.js  style.css
