[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
axum="0.8.4"
tokio={version="1",features=["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hyper = { version = "1.7.0", features = ["full"] }
axum-server = "0.7.2"

