[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8.4"
tokio={version="1",features=["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
hyper = { version = "1.7.0", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "migrate"] }

