[package]
name = "ev-charging-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"

uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.10"
tower-http = { version = "0.6.6", features = ["cors"] }

